src/main.scss
/* ... */
.mds-gray-background:before {
  position: absolute;
  z-index: 0;
}

.hero-title-box {
  position: relative;
  top: 32%;
  padding-top: 50%;
  overflow: hidden;
}

h1.hero-title-first,
h2.hero-title-second {
  position: absolute;
  top: 2rem;
  left: 0;
  -webkit-backface-visibility: hidden;
  -moz-backface-visibility: hidden;
  -ms-backface-visibility: hidden;
  backface-visibility: hidden;
  font-size: $h1-font-size;
  font-weight: $font-weight-bolder;
  z-index: 3;
  opacity: 0;
  transform: translate3d(10%,0,0);
}

h2.hero-title-second {
  top: 8rem;
  left: -5%;
  font-size: $h2-font-size;
}

.mousefollow-bg {
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 9999;
  height: 100vh;
  background: url(images/crosshairs.png);
  overflow: hidden;
  opacity: 0;
  transition: 350ms all;
}

// main part
.mds-gray-background {
  position: relative;
  @include gradient-x;
  @include box-shadow(0px -2px 12px 3px rgba(0,0,0,.75));
}

// portfolio sections

.mds-section,
.portfolio-start {
  position: relative;
  width: 100%;
  height: 100vh;
}

.mds-intro__text {
  font-size: $h3-font-size;
  line-height: $display-line-height;
}

.mds-text__box {
  font-size: $font-size-lg;
}

.mds-text__box:first-child {
  margin-top: -.45rem;
}

.port-img__box {
  position: relative;
  width: 100%;
  height: 100%;
}

.mds-title-text,
.mds-title {
  position: absolute;
  top: 0;
  left: 0;
  font-size: $display2-size;
  text-align: center;
}

.mds-title-text {
  padding-top: 12%;
}

.mds-title {
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.port-subtitle {
  font-size: $display4-size;
  margin-bottom: 2rem;
  font-weight: $font-weight-light;
}

// portfolio slide in elements

.port-slide__in {
  opacity: 0;
  transition: all .35s;
}

.port-slide__in.port-align__left {
  transform: translate3d(-30%, 0, 0) scale(.8);
}

.port-slide__in.port-align__right {
  transform: translate3d(30%, 0, 0) scale(.8);
}

.port-slide__in.port-slide-in__active {
  opacity: 1;
  transform: translate3d(0, 0, 0) scale(1);
}

// Modifiers

// Bootstrap SCSS related modifiers
.pt--10 {
  padding-top: calc(#{$spacer} * 10)
}

.position--center {
  // use bootstrap's 'position-absolute' for example
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

// JS related modifiers

// custom
.hide--element {
  display: none;
}

.translate3d--element {
  transform: translate3d(15%,0,0);
}

.opacity-on-quarter--element {
  opacity: .25;
  transition: opacity 2s;
}

.opacity-on--element {
  opacity: 1 !important;
}

.opacity-off--element {
  opacity: 0;
}

.title-first--animation,
.title-second--animation {
  animation-name: title1;
  animation-duration: .75s;
  animation-direction: normal;
  animation-iteration-count: 1;
  animation-fill-mode: forwards;
}

.title-second--animation {
  animation-delay: .2s;
}

@keyframes title1 {
  0% {
    opacity: 0;
    transform: translate3d(10%,0,0);
  }
  100% {
    opacity: 1;
    transform: translate3d(15%,0,0);
  }
}


// image slider 
.mds-slide-container {
  position: relative;
  width: 100%;
  padding-bottom: 66.4%;
}

.mds-next,
.mds-prev {
  position: absolute;
  top: 50%;
  left: 0;
  color: $black;
  width: 50%;
  height: 100%;
  transform: translateY(-50%);
  z-index: 3;
  font-size: $lead-font-size;
  text-align: center;
  cursor: pointer;
}

.mds-next {
  left: auto;
  right: 0;
}

.mds-next i,
.mds-prev i {
  position: absolute;
  top: 50%;
  left: 2%;
  display: block;
}

.mds-next i {
  left: auto;
  right: 2%;
}

.mds-slider {
  position: absolute;
  top: 0;
  left: 0;
  z-index: 1;
  opacity: 0;
  transition: all 500ms;
}

.mds-slider-first {
  opacity: 1;
  transition: all 500ms;
}

.mds-active {
  opacity: 1;
  transition: all 500ms;
}

// title specific media queries for large devices
@media (min-width: 1199.99px) and (max-width: 1650px){
  h1.hero-title-first,
  h2.hero-title-second {
    font-size: 5rem;
  }
  
  h2.hero-title-second {
    font-size: 5rem;
  }
}

// Large devices (desktops, less than 1200px)
@include media-breakpoint-down(lg){
  .mds-title-text,
  .mds-title {
    font-size: 4rem;
  }
}

// Large devices (desktops, 992px and up)
@include media-breakpoint-only(lg){
  h1.hero-title-first,
  h2.hero-title-second {
    font-size: 4rem;
  }
  
  h2.hero-title-second {
    font-size: 3.5rem;
  }
}

// title specific media queries for medium devices
@media (min-width: 992px) and (max-width: 1000px){
  h1.hero-title-first,
  h2.hero-title-second {
    font-size: 3rem;
  }
  
  h2.hero-title-second {
    font-size: 2.5rem;
  }
}

// Medium devices (tablets, 768px and up)
@include media-breakpoint-only(md){
  h1.hero-title-first,
  h2.hero-title-second {
    font-size: 3rem;
  }
  
  h2.hero-title-second {
    top: 6rem;
    font-size: 2.5rem;
  }
}

// Small devices (landscape phones, less than 768px)
@include media-breakpoint-down(sm){
  .mds-title-text,
  .mds-title {
    font-size: 3rem;
  }
  .mds-intro__text {
    font-size: 1rem;
  }
  .port-subtitle {
    font-size: 2rem;
    line-height: 1.3;
}
}

// Small devices (landscape phones, 576px and up)
@include media-breakpoint-only(sm) {
  h1.hero-title-first,
  h2.hero-title-second {
    font-size: 2.5rem;
  }
  
  h2.hero-title-second {
    top: 6rem;
    font-size: 2rem;
  }
}

// Extra small devices (portrait phones, less than 576px)
@include media-breakpoint-only(xs){
  .hero-title-box {
    padding-top: 100%;
  }
  h1.hero-title-first,
  h2.hero-title-second {
    font-size: 2.2rem;
    margin-left: -1.5rem;
  }
  
  h2.hero-title-second {
    top: 10rem;
    font-size: 2rem;
    margin-left: -3%;
  }
}

